Added object detection with hustvl/yolos-tiny
